# email-to-slack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  email_to_slack.ini.sample  notify.py  notify.sh  pyproject.toml
email_to_slack/: config.py  main.py
