[tool.poetry]
name = "email-to-slack"
version = "0.1.0"
description = ""
authors = ["ytoku"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
types-requests = "^2.28.6"
mypy = ">=0.971"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pylint]
load-plugins = [
  "pylint.extensions.redefined_loop_name",
]
enable = [
  "bad-inline-option",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "design",
  "global-statement",
  "redefined-builtin",
  "duplicate-code",
]
variable-rgx="^[a-z_][a-z0-9_]*$"
argument-rgx="^[a-z_][a-z0-9_]*$"
