[tool.poetry]
name = "email-to-slack"
version = "0.1.0"
description = ""
authors = ["ytoku"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.6"
pylint = "^3.2.4"
pyright = "^1.1.369"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["."]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pylint]
load-plugins = [
  "pylint.extensions.redefined_loop_name",
]
enable = [
  "bad-inline-option",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "design",
  "global-statement",
  "redefined-builtin",
  "duplicate-code",
]
variable-rgx = "^[a-z_][a-z0-9_]*$"
argument-rgx = "^[a-z_][a-z0-9_]*$"
attr-rgx = "^[a-z_][a-z0-9_]*$"
class-attribute-naming-style = "any"
